--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_dotenv: ^5.2.1
   flutter_animate: ^4.5.2
+  weather_icons: ^3.0.0
   flutter_localizations:
     sdk: flutter
 
